# Tiki_Tracker

./: .gitignore  README.md  build_icon.py  pyproject.toml  requirements.txt  run.py
TikiTracker.app/Contents/: Info.plist
TikiTracker.app/Contents/MacOS/: TikiTracker
data/: AppIcon.icns
src/tiki_tracker/: __init__.py  app.py  main.py
src/tiki_tracker/db/: __init__.py  database.py  schema.py  seed_data.py
src/tiki_tracker/models/: __init__.py  ingredient.py  inventory.py  recipe.py
src/tiki_tracker/services/: __init__.py  export_service.py  image_service.py  inventory_service.py  qr_service.py  recipe_service.py  suggestion_service.py
src/tiki_tracker/ui/: __init__.py  theme.py
src/tiki_tracker/ui/views/: __init__.py  add_recipe.py  favorites.py  home.py  inventory.py  recipe_detail.py  recipes.py  settings.py
tests/: test_inventory_service.py  test_qr_service.py  test_recipe_service.py
